implement agent os core: react loop, memory, tools, web api, cli, and tests
Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>